# claim-audit-lab

./: .gitignore  CHANGELOG.md  DECISIONS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
assets/: github-pin.md
docs/: handoff-prompt.md  master-plan.md  phase-11-public-packaging-plan.md  phase-13-traceability-report-polish-plan.md  phase-4-evidence-matching-plan.md  phase-6-audit-orchestration-plan.md  phase-8-cli-plan.md  research-use.md  target-report-prompt.md  v1-round-trip.md  validation-matrix-reference.md  verification.md
examples/drafts/: ai-research-note.md  product-readme-note.md
examples/evidence/: ai-research-evidence.yml  product-readme-evidence.yml
examples/reports/: README.md  ai-research-note.slice.json  ai-research-note.slice.md  ai-research-note.target.md  product-readme-note.slice.json  product-readme-note.slice.md
scripts/: anthropic_api_bridge.py  gold_lite_model_panel.py  gold_lite_review.py  pilot001_a1_imperative_run05.py  pilot001_absence_route_run03.py  pilot001_floor_sweep.py  pilot001_gold_shim.py  pilot001_premise_granularity_run04.py  run_demo.py  verify_install.py
src/claim_audit_lab/: __init__.py  auditor.py  claim_extraction.py  classifiers.py  cli.py  evidence_matching.py  guidance.py  loader.py  models.py  policy.py  report.py  resources.py  rules.py  scoring.py  text.py
src/claim_audit_lab/contracts/: __init__.py  adapter.py  audit_flags.py  bundle_loader.py  cb_models.py  output_writer.py  serialization.py
src/claim_audit_lab/examples/evidence/: ai-research-evidence.yml
src/claim_audit_lab/schema/: vocabulary.yaml
src/claim_audit_lab/v1/: __init__.py  calibrate.py  cb_writeback.py  config.py  features.py  intake.py  models.py  pipeline.py  protocols.py  runner.py
src/claim_audit_lab/v1/configs/: __init__.py  cal-rules-v1.5.0.yaml  v1-default.yaml
tests/: README.md  test_auditor.py  test_cb_adapter.py  test_cb_bundle_loader.py  test_cb_models.py  test_cb_output_writer.py  test_claim_extraction.py  test_classifiers.py  test_cli.py  test_evidence_matching.py  test_loader.py  test_models.py  test_report.py  test_resources.py  test_rules.py  test_text.py  test_vertical_slice.py
tests/fixtures/drafts/: plain-note.txt
tests/fixtures/evidence/: ai-research-evidence.json  malformed-evidence.yml  missing-required-field.yml
tests/v1/: test_apparatus_round_trip.py  test_byte_identity.py  test_calibrate.py  test_cb_writeback.py  test_cli_v1.py  test_config.py  test_entailer.py  test_features.py  test_gold_lite_model_panel.py  test_gold_lite_review.py  test_intake.py  test_models.py  test_pilot001_a1_imperative.py  test_pilot001_floor_sweep.py  test_pilot001_premise_granularity.py  test_pipeline_e2e.py  test_protocols.py  test_retriever.py  test_rules.py
tests/v1/testing/: __init__.py  bundles.py  stubs.py
validation/: README.md  deviation-log.md  iq-installation.md  oq-operational.md  pq-performance.md  qualification-plan.md
(+43 files in other folders)
