[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claim-audit-lab"
version = "0.1.0"
description = "Audit whether draft claims are supported by supplied evidence."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Cameron Sanderson" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing",
]
dependencies = [
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.4",
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
]

[project.scripts]
claim-audit = "claim_audit_lab.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
