[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claim-audit-lab"
version = "0.2.0"
description = "Audit whether draft claims are supported by supplied evidence."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["claims", "evidence", "audit", "cli", "traceability"]
authors = [
    { name = "Cameron Sanderson" },
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing",
]
dependencies = [
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/camerontjs-dot/claim-audit-lab"
Repository = "https://github.com/camerontjs-dot/claim-audit-lab"
Issues = "https://github.com/camerontjs-dot/claim-audit-lab/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "coverage[toml]>=7.4",
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
]

[project.scripts]
claim-audit = "claim_audit_lab.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claim_audit_lab = [
    "schema/.contract-version",
    "schema/vocabulary.yaml",
    "examples/drafts/*.md",
    "examples/evidence/*.yml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
